--- a/Source_Ios/PopEngine_Ios_Info.plist
+++ b/Source_Ios/PopEngine_Ios_Info.plist
@@ -15,10 +15,8 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
-	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2019 NewChromantics. All rights reserved.</string>
 </dict>
 </plist>
