--- a/Source_Osx/PopEngine.xcconfig
+++ b/Source_Osx/PopEngine.xcconfig
@@ -1,4 +1,5 @@
 #include "../src/SoyLib/SoyLib_Osx.xcconfig"
+#include "../src/Version.xcconfig"
 
 
 GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) TARGET_OSX_BUNDLE
