--- a/Source_Ios/PopEngine_Ios.xcconfig
+++ b/Source_Ios/PopEngine_Ios.xcconfig
@@ -2,7 +2,8 @@
 #include "../src/Version.xcconfig"
 
 
-GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) TARGET_IOS JSAPI_JSCORE
+
+GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) TARGET_IOS JSAPI_JSCORE GLES_SILENCE_DEPRECATION
 //GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) ENABLE_OPENGL
 
 OTHER_CFLAGS = -Wno-ambiguous-macro
