fixed not linking modules properly in a clean build

--- a/PopEngine.visualstudio/JsApi_JsCore.props
+++ b/PopEngine.visualstudio/JsApi_JsCore.props
@@ -4,7 +4,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <IncludePath>/usr/include/webkitgtk-4.0/;$(IncludePath)</IncludePath>
-    <LibraryPath>/usr/lib/aarch64-linux-gnu/</LibraryPath>
+    <LibraryPath>/usr/lib/aarch64-linux-gnu/;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
