Building osx, working osx to match ios sokol gui implementation

--- a/Source_App/PopEngineApp_Osx_Info.plist
+++ b/Source_App/PopEngineApp_Osx_Info.plist
@@ -26,7 +26,7 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2019 NewChromantics. All rights reserved.</string>
 	<key>NSMainNibFile</key>
-	<string>PopEngine</string>
+	<string>TestApp_Osx</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
