--- a/PopEngine.visualstudio/PopEngineLinux.vcxproj
+++ b/PopEngine.visualstudio/PopEngineLinux.vcxproj
@@ -76,14 +76,22 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <LibraryPath>/usr/lib/aarch64-linux-gnu/</LibraryPath>
+    <OutDir>$(ProjectDir)Build\$(ProjectName)_$(Configuration)_$(Platform)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|ARM'">
     <LibraryPath>/usr/lib/aarch64-linux-gnu/</LibraryPath>
+    <OutDir>$(ProjectDir)Build\$(ProjectName)_$(Configuration)_$(Platform)\</OutDir>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
+    <OutDir>$(ProjectDir)Build\$(ProjectName)_$(Configuration)_$(Platform)\</OutDir>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|ARM64'" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'">
+    <OutDir>$(ProjectDir)Build\$(ProjectName)_$(Configuration)_$(Platform)\</OutDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|ARM64'">
+    <OutDir>$(ProjectDir)Build\$(ProjectName)_$(Configuration)_$(Platform)\</OutDir>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <Link />
     <RemotePostBuildEvent>
@@ -105,6 +113,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <Link>
       <LibraryDependencies>wiringPi</LibraryDependencies>
+      <AdditionalOptions>-Wl,-rpath,$$ORIGIN -Wl,-rpath,. -Wl,rpath,../../popcameradevice/Nvidia -Wl,rpath,../../poph264/Nvidia %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <RemotePostBuildEvent>
       <Command>
@@ -307,6 +316,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\PopEngine.Linux\Makefile" />
+    <None Include="..\PopEngine.Package\package.json" />
     <None Include="..\UnitTest\HelloWorld\bootup.js" />
   </ItemGroup>
   <ItemGroup>
@@ -327,19 +337,33 @@
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <ClCompile />
+    <Link>
+      <AdditionalOptions>-Wl,-rpath,$$ORIGIN -Wl,-rpath,. -Wl,rpath,../../popcameradevice/Nvidia -Wl,rpath,../../poph264/Nvidia %(AdditionalOptions)</AdditionalOptions>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|ARM'">
     <ClCompile />
+    <Link>
+      <AdditionalOptions>-Wl,-rpath,$$ORIGIN -Wl,-rpath,. -Wl,rpath,../../popcameradevice/Nvidia -Wl,rpath,../../poph264/Nvidia %(AdditionalOptions)</AdditionalOptions>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">
     <ClCompile />
+    <Link />
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|ARM64'">
     <ClCompile />
     <Link />
+    <Link />
+    <Link>
+      <AdditionalOptions>-Wl,-rpath,$$ORIGIN -Wl,-rpath,. -Wl,rpath,../../popcameradevice/Nvidia -Wl,rpath,../../poph264/Nvidia %(AdditionalOptions)</AdditionalOptions>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'">
     <ClCompile />
+    <Link>
+      <AdditionalOptions>-Wl,-rpath,$$ORIGIN -Wl,-rpath,. -Wl,rpath,../../popcameradevice/Nvidia -Wl,rpath,../../poph264/Nvidia %(AdditionalOptions)</AdditionalOptions>
+    </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
