Attempted to add stack-size warning at compile time

--- a/PopEngine.visualstudio/PopEngineLinux.props
+++ b/PopEngine.visualstudio/PopEngineLinux.props
@@ -16,6 +16,7 @@
       <CppLanguageStandard>c++17</CppLanguageStandard>
       <CppAdditionalWarning>no-reorder;no-unused-but-set-variable;no-unused-value;no-nonnull-compare;no-conversion;no-sign-compare;no-address;%(CppAdditionalWarning)</CppAdditionalWarning>
       <PositionIndependentCode>true</PositionIndependentCode>
+      <AdditionalOptions>-Wstack-usage=8388600 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup />
