PopH264 and PopCameraDevice now need to be explicitly enabled, and was missing from linux build

--- a/PopEngine.Linux/Makefile
+++ b/PopEngine.Linux/Makefile
@@ -96,7 +96,9 @@ $(PROJECT_PATH)/Source_App/PopEngineUnitTestMain.cpp	\
 
 LIB_DEFINES = \
 -DTARGET_LINUX	\
--DJSAPI_JSCORE
+-DJSAPI_JSCORE	\
+-DENABLE_POPCAMERADEVICE	\
+-DENABLE_POPH264	\
 
 
 ifeq ($(CONFIGURATION),Release)
