--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -60,6 +60,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Master_JsCore|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Master_V8|x64'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="..\src\SoyGui_Win32.h" />
     <ClInclude Include="..\src\SoyHid.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_JsCore|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_Chakra|x64'">true</ExcludedFromBuild>
@@ -118,6 +119,7 @@
     <ClInclude Include="..\src\SoyOpenglView.h" />
     <ClInclude Include="..\src\SoyOpenglWindow.h" />
     <ClInclude Include="..\src\SoyOpenxr.h" />
+    <ClInclude Include="..\src\SoySokol_Win32.h" />
     <ClInclude Include="..\src\SoyWin32.h" />
     <ClInclude Include="..\src\TApiBluetooth.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_JsCore|x64'">true</ExcludedFromBuild>
@@ -202,6 +204,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Master_V8|x64'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="..\src\TApiSokol.h" />
     <ClInclude Include="..\src\TApiWebsocket.h" />
     <ClInclude Include="..\src\TApiXr.h" />
     <ClInclude Include="..\src\TApiZip.h" />
@@ -275,6 +278,7 @@
     <ClCompile Include="..\src\SoyLib\src\Win32ColourControl.c" />
     <ClCompile Include="..\src\SoyLib\src\Win32ImageMapControl.c" />
     <ClCompile Include="..\src\SoyOpenxr.cpp" />
+    <ClCompile Include="..\src\SoySokol_Win32.cpp" />
     <ClCompile Include="..\src\SoyWin32.cpp" />
     <ClCompile Include="..\src\TApiDirectx11.cpp" />
     <ClCompile Include="..\src\TApiEngine.cpp" />
@@ -297,6 +301,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Master_V8|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="..\src\TApiPanopoly.cpp" />
+    <ClCompile Include="..\src\TApiSokol.cpp" />
     <ClCompile Include="..\src\TApiXr.cpp" />
     <ClCompile Include="..\src\TApiZip.cpp" />
     <ClCompile Include="..\src\V8Bind.cpp">
