More tidyup/splitting win32 stuff

--- a/PopEngine.visualstudio/PopEngine.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine.vcxproj.filters
@@ -361,7 +361,6 @@
       <Filter>Libs\Json11</Filter>
     </ClInclude>
     <ClInclude Include="..\src\SoyLib\src\SoyDirectx.h" />
-    <ClInclude Include="..\src\Win32OpenglContext.h" />
     <ClInclude Include="..\src\SoyWin32.h">
       <Filter>Source</Filter>
     </ClInclude>
@@ -384,6 +383,9 @@
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="..\src\SoySokol_Linux.h">
+      <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\SoyOpenglContext_Win32.h">
       <Filter>Source</Filter>
     </ClInclude>
   </ItemGroup>
@@ -944,9 +946,6 @@
     <ClCompile Include="..\src\SoyOpenxr.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\Win32OpenglContext.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\SoyLib\src\SoyDirectx.cpp">
       <Filter>Source</Filter>
     </ClCompile>
@@ -963,6 +962,12 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\SoySokol_Linux.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\SoyGui_Win32.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\SoyOpenglContext_Win32.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
